--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-size: 18px;
     --color-primary: #FFC888;
     --color-primary-dark: #A58059;
-    --color-secondary: #8039AD;
+    --color-secondary: #562777;
     text-shadow: -1px -1px 0 rgba(255, 255, 255, 0.5), 1px -1px 0 rgba(255, 255, 255, 0.5), -1px 1px 0 rgba(255, 255, 255, 0.5), 1px 1px 0 rgba(255, 255, 255, 0.5);
 }
 
